--- a/css/montaje.css
+++ b/css/montaje.css
@@ -155,7 +155,7 @@ footer {
 
 footer .columna {
     width: 100%;
-    
+
 }
 
 footer #columna1 {
@@ -174,7 +174,7 @@ footer #columna2 {
 }
 
 
-footer #columna2 li{
+footer #columna2 li {
     display: inline-block;
     padding: 10px 20px;
 }
@@ -208,17 +208,17 @@ body #subtitulo {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
-    align-items: center;
     justify-content: center;
+    position: relative;
+    left: 1%;
 }
 
 .articulo {
-    width: 28.2%;
-    height: 40vh;
+    width: 47.2%;
+    height: auto;
     background-color: #94d793;
     margin: 0.4% 2% 1% 0.4%;
     border-radius: 10px;
-    cursor: pointer;
     transition: 0.5s all;
     text-align: left;
 }
@@ -232,7 +232,9 @@ body #subtitulo {
 #parrafo {
     position: relative;
     left: 3%;
-    padding: 20px;
+    text-align: justify;
+    padding: 20px 20px 20px 20px;
+    width: 94%;
 }
 
 
@@ -240,11 +242,90 @@ body #subtitulo {
     position: relative;
     text-align: center;
     font-size: 39px;
+    padding: 20px 20px 20px 20px;
 }
 
 .articulo img {
     position: relative;
     padding: 0px 20px 20px 20px;
-    width: 20%;
+    width: 31%;
+    left: 35%;
 }
 
+#video {
+    position: relative;
+    padding: 0px 20px 20px 20px;
+    left: 35%;
+}
+
+#carrousel {
+    width: 50%;
+    position: relative;
+    left: 28%;
+}
+
+.carousel {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .slide {
+    display: none;
+  }
+  
+  .slide.active {
+    display: block;
+  }
+
+  #prevBtn {
+    position: relative;
+    left: 80%;
+    font-size: 50px;
+    background-color: transparent;
+    border-color: transparent;
+    top: -150px;
+    cursor: pointer;
+    transition: all 0.2s;
+  }
+
+  #nextBtn {
+    position: relative;
+    left: 20%;
+    font-size: 50px;
+    background-color: transparent;
+    border-color: transparent;
+    top: -150px;
+    cursor: pointer;
+    transition: all 0.2s;
+  }
+
+  #nextBtn:hover {
+    color: white;
+  }
+
+  #prevBtn:hover {
+    color: white;
+  }
+
+  #prevBtn {
+    rotate: -180deg;
+  }
+
+  .circuito  {
+    width: 100%;
+    height: auto;
+  }
+  
+  .circu {
+    width: 100%;
+    background-color: #94d793;
+    margin: 20px;
+    border-radius: 10px;
+  }
+  
+  .circuito h2 {
+    position: relative;
+    left: 20px;
+    padding: 15px 15px 0px 15px;
+}
